# HFTStuttgartProg3

./: .gitignore  CMakeLists.txt  ConfigurationReader.cpp  TaskStartException.cpp
CMakeModules/: FindLibBoostRegex.cmake
Prog3/: ConfigurationAttribute.cpp  ConfigurationAttribute.h  ConfigurationObj.cpp  ConfigurationObjWrapper.h  ConfigurationReader.cpp  ConfigurationReader.h  Issues.txt  Prog3.1  ServiceProcessor.cpp  ServiceProcessor.h  ServiceReader.cpp  ServiceReader.h  ServiceRequest.cpp  ServiceRequest.h  TaskDescription.cpp  TaskDescription.h  TaskDescriptionReader.cpp  TaskDescriptionReader.h  TaskProcessor.cpp  TaskProcessor.h  main.cpp
Prog3.xcodeproj/: project.pbxproj
etc/: System.ini  TaskDescriptions.0001.ini  TaskDescriptions.0001.v2.still_broken.ini
src/: CMakeLists.txt  ConfigurationAttribute.cpp  ConfigurationAttribute.h  ConfigurationObj.cpp  ConfigurationObj.h  ConfigurationObjWrapper.cpp  ConfigurationObjWrapper.h  ConfigurationReader.cpp  ConfigurationReader.h  Controller.cpp  Controller.h  Prog3.cpp  Prog3Settings.h  SemanticParseException.cpp  SemanticParseException.h  ServiceProcessor.cpp  ServiceProcessor.h  ServiceReader.cpp  ServiceReader.h  ServiceRequest.cpp  ServiceRequest.h  Task.cpp  Task.h  TaskDescription.cpp  TaskDescription.h  TaskDescriptionReader.cpp  TaskDescriptionReader.h  TaskProcessor.cpp  TaskProcessor.h  TaskStartException.cpp  TaskStartException.h
